sbin_PROGRAMS = t50
t50_SOURCES = include/help.h \
include/memalloc.h \
include/configuration.h \
include/cksum.h \
include/errors.h \
include/randomizer.h \
include/defines.h \
include/config.h \
include/modules.h \
include/netio.h \
include/protocol/tcp_options.h \
include/protocol/igmp.h \
include/protocol/rsvp.h \
include/protocol/egp.h \
include/protocol/eigrp.h \
include/protocol/rip.h \
include/protocol/ospf.h \
include/protocol/gre.h \
include/protocol/ip.h \
include/cidr.h \
include/typedefs.h \
config.c \
randomizer.c \
netio.c \
usage.c \
modules/ipsec.c \
modules/udp.c \
modules/icmp.c \
modules/dccp.c \
modules/igmpv3.c \
modules/eigrp.c \
modules/ripv1.c \
modules/gre.c \
modules/tcp.c \
modules/egp.c \
modules/ip.c \
modules/rsvp.c \
modules/ospf.c \
modules/igmpv1.c \
modules/ripv2.c \
help/igmp_help.c \
help/gre_help.c \
help/ip_help.c \
help/rip_help.c \
help/ospf_help.c \
help/general_help.c \
help/tcp_udp_dccp_help.c \
help/eigrp_help.c \
help/rsvp_help.c \
help/ipsec_help.c \
help/icmp_help.c \
help/egp_help.c \
memalloc.c \
main.c \
modules.c \
errors.c \
cidr.c \
cksum.c 
