sbin_PROGRAMS = t50
t50_SOURCES = include/t50_help.h \
include/t50_cksum.h \
include/t50_memalloc.h \
include/t50_errors.h \
include/t50_randomizer.h \
include/t50_defines.h \
include/t50_config.h \
include/t50_modules.h \
include/protocol/t50_tcp_options.h \
include/protocol/t50_igmp.h \
include/protocol/t50_rsvp.h \
include/protocol/t50_egp.h \
include/protocol/t50_eigrp.h \
include/protocol/t50_rip.h \
include/protocol/t50_ospf.h \
include/protocol/t50_gre.h \
include/protocol/t50_ip.h \
include/t50_netio.h \
include/t50_cidr.h \
include/t50_typedefs.h \
config.c \
randomizer.c \
usage.c \
modules/ipsec.c \
modules/udp.c \
modules/icmp.c \
modules/dccp.c \
modules/igmpv3.c \
modules/eigrp.c \
modules/ripv1.c \
modules/gre.c \
modules/tcp.c \
modules/egp.c \
modules/ip.c \
modules/rsvp.c \
modules/ospf.c \
modules/igmpv1.c \
modules/ripv2.c \
help/igmp_help.c \
help/gre_help.c \
help/ip_help.c \
help/rip_help.c \
help/ospf_help.c \
help/general_help.c \
help/tcp_udp_dccp_help.c \
help/eigrp_help.c \
help/rsvp_help.c \
help/ipsec_help.c \
help/icmp_help.c \
help/egp_help.c \
main.c \
modules.c \
errors.c \
cidr.c \
netio.c \
cksum.c \
memalloc.c
